--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,9 @@
 <nav>
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
+  <a routerLink="/parent-child">ParentChild</a>
+  <a routerLink="/from1">From1</a>
+  <a routerLink="/from2">From2</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
