add template-driven forms

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
   <a routerLink="/dashboard">Dashboard</a>
   <a routerLink="/heroes">Heroes</a>
   <a routerLink="/parent-child">ParentChild</a>
-  <a routerLink="/from1">From1</a>
-  <a routerLink="/from2">From2</a>
+  <a routerLink="/from1">Template-driven Forms</a>
+  <a routerLink="/from2">Reactive Forms </a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
