--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   <a routerLink="/parent-child">ParentChild</a>
   <a routerLink="/from1">Template-driven Forms</a>
   <a routerLink="/from2">Reactive Forms </a>
+  <a routerLink="/from3">Reactive Forms Array</a>
 </nav>
 <router-outlet></router-outlet>
 <app-messages></app-messages>
